--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help")%>
+<h1>Help / FAQs</h1>
+<p>
+	Help found on this page. This page helps a user. This page.
+</p>
