--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home")%>
+<h1>Home Page. Welcome Home.</h1>
+<p>Home page, to include images at a later date. Hi.</p>
