--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,2 @@
-<% provide(:title, "Home")%>
 <h1>Home Page. Welcome Home.</h1>
-<p>Home page, to include images at a later date. Hi.</p>
+<p>Home page, to include images at a later date. Hey.</p>
