--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
 <% provide(:title, "Home")%>
-<h1>Home Page. Welcome Home.</h1>
-<p>Home page, to include images at a later date. Hi.</p>
+<div class="center jumbotron">
+	<h1>Home Page. Welcome Home.</h1>
+	<p>Home page, to include images at a later date. Hi.</p>
+	<%= link_to "Sign up now!", signup_path , class: "btn btn-lg btn-primary" %>
+</div>
+	<%= link_to image_tag("rails.png", alt: "Rails Logo"),
+			'http://rubyonrails.org' %>
+
