--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,23 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
 $light-gray : #777;
+
+/* mix-ins, variables, etc */
+
+@mixin box_sizing {
+	-moz-boz-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.debug_dump {
+	clear: both;
+	float: left;
+	width: 100%;
+	margin-top: 45px;
+	@include box_sizing;
+}
 
 /* universal */
 
@@ -98,3 +115,72 @@ footer {
 		margin-left: 15px;
 	}
 }
+
+/* sidebar */
+
+aside {
+	section.user_info {
+		margin-top: 21px;
+	}
+	section {
+		padding: 10px 0;
+		margin-top: 21px;
+		&:first-child {
+			border: 0;
+			padding-top: 0;
+		}
+		span {
+			display: block;
+			margin-bottom: 3px;
+			line-height: 1;
+		}
+	}
+}
+
+.gravatar {
+	float: left;
+	margin-right: 11px;
+}
+
+.gravatar_edit {
+	margin-top: 16px;
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+	border: 1px solid #bbb;
+	width: 100%;
+	margin-bottom: 15px;
+	@include box_sizing;
+}
+
+input {
+	height: auto !important;
+}
+
+#error_explanation {
+	color: red;
+	ul {
+		color: red;
+		margin: 0 0 30px 0;
+	}
+}
+
+.field_with_errors {
+	@extend .has-error;
+	.form-control {
+		color: $state-danger-text;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
