--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -188,7 +188,17 @@ input {
 	margin-left: 0;
 }
 
+/* Users index */
 
+.users {
+	list-style: none;
+	margin: 0;
+	li {
+		overflow: auto;
+		padding: 10px;
+		border-bottom: 1px solid $gray-lighter;
+	}
+}
 
 
 
