--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
+<div id="image-stripe-jordan-top"></div>
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="container">
-		<%= link_to "sample app", root_path, id: "logo" %>
+		<%= link_to "j-micro", root_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
 				<li><%= link_to "Home", root_path %></li>
